<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/cleanHistorySwitchCompat"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/clean_history"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:switchMinWidth="50dp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/pushSwitchCompat"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/push_notification"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:switchMinWidth="50dp" />

    <LinearLayout
        android:id="@+id/themeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/theme_app"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/themeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:text="@string/dark_theme" />

    </LinearLayout>
</LinearLayout>


